# Agrilends

./: .ic-assets.json5  AUDIT_LOGGING_INTEGRATION_GUIDE.md  AUTOMATED_MAINTENANCE_NOTIFICATION_INTEGRATION_EXAMPLE.rs  Cargo.toml  GOVERNANCE_API_DOCUMENTATION.md  GOVERNANCE_IMPLEMENTATION_COMPLETE.md  GOVERNANCE_NOTIFICATION_INTEGRATION_EXAMPLE.rs  GOVERNANCE_TESTING_EXAMPLES.md  HEARTBEAT_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIQUIDITY_MANAGEMENT_NOTIFICATION_INTEGRATION_EXAMPLE.rs  LOAN_LIFECYCLE_NOTIFICATION_INTEGRATION_EXAMPLE.rs  NOTIFICATION_SYSTEM_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SYSTEM_INTEGRATION.md  ORACLE_IMPLEMENTATION_GUIDE.md  ORACLE_USAGE_EXAMPLES.md  README.md  README_GOVERNANCE_IMPLEMENTATION.md  README_LIQUIDATION_IMPLEMENTATION.md  README_LOAN_REPAYMENT.md  RWA_NFT_IMPLEMENTATION.md  RWA_NFT_INTEGRATION_GUIDE.md  SCALABILITY_ARCHITECTURE_IMPLEMENTATION.md  SCALABILITY_IMPLEMENTATION_COMPLETE.md  TEST_CONFIGURATION.md  TREASURY_IMPLEMENTATION_SUMMARY.md  TREASURY_MANAGEMENT_IMPLEMENTATION.md  TREASURY_USAGE_EXAMPLES.md  USER_MANAGEMENT_README.md  admin_dashboard.html  audit_dashboard.html  automated_maintenance_dashboard.html  deploy.ps1  dfx.json  farmer_dashboard.html  governance_dashboard.html  heartbeat_advanced_dashboard.html  investor_dashboard.html  liquidation_frontend.js  (+8 more)
src/agrilends_backend/: Cargo.toml  agrilends_backend.did
src/agrilends_backend/src/: advanced_analytics.rs  advanced_query_routing.rs  audit_logging.rs  automated_maintenance.rs  ckbtc_integration.rs  dashboard_support.rs  (+24 more)
(+66 files in other folders)
