[package]
name = "agrilends_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "agrilends_backend"
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
